# fgarcade

./: .coveragerc  .gitignore  README.md  pyproject.toml  tox.ini
examples/: game.py  game_class.py
fgarcade/: __init__.py  assets.py  enums.py  fix.py  level_factory.py  physics.py  platformer.py  sprites.py  utils.py
fgarcade/game/: __init__.py  background.py  base.py  camera.py  physics.py  platformer.py  platforms.py  player.py
